--- a/index.html
+++ b/index.html
@@ -69,14 +69,20 @@
 
         <ul class="auth-nav list">
           <li class="auth-nav__item">
-            <a href="mailto:info@devstudio.com" class="auth-nav__link link">
+            <a
+              href="mailto:info@devstudio.com"
+              class="auth-nav__link .auth-nav__link--mail link"
+            >
               <svg class="auth-nav__icon" width="16px" height="12px">
                 <use href="./images/icon/sprite.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="auth-nav__item">
-            <a href="tel:+380961111111" class="auth-nav__link link">
+            <a
+              href="tel:+380961111111"
+              class="auth-nav__link .auth-nav__link--tel link"
+            >
               <svg class="auth-nav__icon" width="10px" height="16px">
                 <use href="./images/icon/sprite.svg#icon-smartphone"></use></svg
               >+38 096 111 11 11
@@ -87,20 +93,56 @@
           <div class="menu__nav">
             <ul class="menu__nav-list list">
               <li class="menu__nav-item">
-                <a class="link menu__nav-link" href="">Студия</a>
+                <a class="link menu__nav-link--current" href="./index.html"
+                  >Студия</a
+                >
               </li>
               <li class="menu__nav-item">
-                <a class="link menu__nav-link" href="">Портфолио</a>
+                <a class="link menu__nav-link" href="./portfolio.html"
+                  >Портфолио</a
+                >
               </li>
               <li class="menu__nav-item">
-                <a class="link menu__nav-link" href="">Контакты</a>
+                <a class="link menu__nav-link" href="./index.html">Контакты</a>
               </li>
             </ul>
           </div>
           <div class="menu__contacts">
             <ul class="menu__contacts-list list">
-              <li><a href="" class="link">+38 096 111 11 11</a></li>
-              <li><a href="" class="link">info@devstudio.com</a></li>
+              <li class="menu__contacts-item">
+                <a href="tel:+380961111111" class="menu__contacts-link link"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+              <li class="menu__contacts-item">
+                <a
+                  href="mail:info@devstudio.com"
+                  class="menu__contacts-link link"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+            <ul class="main__social-list list">
+              <li class="main__social-item">
+                <a href="./index.html" class="main__social-link link"
+                  >Instagram</a
+                >
+              </li>
+              <li class="main__social-item">
+                <a href="./index.html" class="main__social-link link"
+                  >Twitter</a
+                >
+              </li>
+              <li class="main__social-item">
+                <a href="./index.html" class="main__social-link link"
+                  >Facebook</a
+                >
+              </li>
+              <li class="main__social-item">
+                <a href="./index.html" class="main__social-link link"
+                  >LinkedIn</a
+                >
+              </li>
             </ul>
           </div>
         </div>
