--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <li class="auth-nav__item">
             <a
               href="mailto:info@devstudio.com"
-              class="auth-nav__link .auth-nav__link--mail link"
+              class="auth-nav__link auth-nav__link--mail link"
             >
               <svg class="auth-nav__icon" width="16px" height="12px">
                 <use href="./images/icon/sprite.svg#icon-envelope"></use></svg
@@ -81,7 +81,7 @@
           <li class="auth-nav__item">
             <a
               href="tel:+380961111111"
-              class="auth-nav__link .auth-nav__link--tel link"
+              class="auth-nav__link auth-nav__link--tel link"
             >
               <svg class="auth-nav__icon" width="10px" height="16px">
                 <use href="./images/icon/sprite.svg#icon-smartphone"></use></svg
