проверка с остальными секциями

--- a/index.html
+++ b/index.html
@@ -150,16 +150,17 @@
     </header>
     <main>
       <!--- --Еффективные решения для вашего бизнеса ---->
-      <!-- <section class="hero">
+      <section class="hero">
         <div class="container">
           <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
           <button data-modal-open type="button" class="button">
             Заказать услугу
           </button>
         </div>
-      </section> -->
+      </section>
+      -->
       <!-------------- Оссобенности ----------------->
-      <!-- <section class="section">
+      <section class="section">
         <div class="container">
           <h2 hidden>Особенности</h2>
           <ul class="features__list list">
@@ -213,7 +214,8 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
+      -->
 
       <!-- Чем мы занимаемся -->
       <!-- <section class="section performance">
