--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
       </section>
 
       <!-- Чем мы занимаемся -->
-      <!-- <section class="section performance">
+      <section class="section performance">
         <div class="container">
           <h2 class="performance__title work">Чем мы занимаемся</h2>
           <ul class="performance__list list">
@@ -256,9 +256,10 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
+
       <!-- Наша команда -->
-      <!-- <section class="section team">
+      <section class="section team">
         <div class="container">
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list list">
@@ -267,8 +268,8 @@
                 class="img"
                 src="./images/team/img.jpg"
                 alt="Человек в очках и красном поло"
-                width="270"
-                height="260"
+                width="450"
+                height="460"
               />
               <div class="team__information-block">
                 <h3 class="team__name">Игорь Демьяненко</h3>
@@ -316,8 +317,8 @@
                 class="img"
                 src="./images/team/img1.jpg"
                 alt=":Женщина в черном костюме и очках"
-                width="270"
-                height="260"
+                width="450"
+                height="460"
               />
               <div class="team__information-block">
                 <h3 class="team__name">Ольга Репина</h3>
@@ -365,8 +366,8 @@
                 class="img"
                 src="./images/team/img2.jpg"
                 alt="улыбающийся мужчина в рубашке"
-                width="270"
-                height="260"
+                width="450"
+                height="460"
               />
               <div class="team__information-block">
                 <h3 class="team__name">Николай Тарасов</h3>
@@ -414,8 +415,8 @@
                 class="img"
                 src="./images/team/img3.jpg"
                 alt="Мужчина в черной футболке и очках"
-                width="270"
-                height="260"
+                width="450"
+                height="460"
               />
               <div class="team__information-block">
                 <h3 class="team__name">Михаил Ермаков</h3>
@@ -460,7 +461,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!------------------- Постоянные клиенты----------->
       <!-- <section class="section clients">
         <div class="container">
