--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
         </div>
       </section>
       <!------------------- Постоянные клиенты----------->
-      <!-- <section class="section clients">
+      <section class="section clients">
         <div class="container">
           <h2 class="clients__title">Постоянные клиенты</h2>
           <ul class="list clients__list">
@@ -511,7 +511,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <!-- Футер -->
     <!-- <footer class="footer">
