--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
       </section>
     </main>
     <!-- Футер -->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer__container">
         <div class="footer__addres">
           <a lang="en" href="./index.html" class="footer__logo link"
@@ -592,7 +592,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <!-- --------- бэкдроп и модальное окно--------- -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
