--- a/portfolio.html
+++ b/portfolio.html
@@ -48,15 +48,13 @@
         <nav class="nav">
           <ul class="site-nav__list list">
             <li class="site-nav__item">
-              <a
-                href="./index.html"
-                class="link site-nav__link site-nav__link--current"
-              >
-                Студия</a
-              >
+              <a href="./index.html" class="link site-nav__link"> Студия</a>
             </li>
             <li class="site-nav__item">
-              <a href="./portfolio.html" class="site-nav__link link">
+              <a
+                href="./portfolio.html"
+                class="site-nav__link link site-nav__link--current"
+              >
                 Портфолио</a
               >
             </li>
