--- a/index.html
+++ b/index.html
@@ -110,14 +110,16 @@
           <div class="menu__contacts">
             <ul class="menu__contacts-list list">
               <li class="menu__contacts-item">
-                <a href="tel:+380961111111" class="menu__contacts-link link"
+                <a
+                  href="tel:+380961111111"
+                  class="menu__contacts-link menu__contacts-link--tel link"
                   >+38 096 111 11 11</a
                 >
               </li>
               <li class="menu__contacts-item">
                 <a
                   href="mail:info@devstudio.com"
-                  class="menu__contacts-link link"
+                  class="menu__contacts-link menu__contacts-link--mail link"
                   >info@devstudio.com</a
                 >
               </li>
