--- a/portfolio.html
+++ b/portfolio.html
@@ -90,12 +90,10 @@
           <div class="menu__nav">
             <ul class="menu__nav-list list">
               <li class="menu__nav-item">
-                <a class="link menu__nav-link--current" href="./index.html"
-                  >Студия</a
-                >
+                <a class="link menu__nav-link" href="./index.html">Студия</a>
               </li>
               <li class="menu__nav-item">
-                <a class="link menu__nav-link" href="./portfolio.html"
+                <a class="menu__nav-link--current link" href="./portfolio.html"
                   >Портфолио</a
                 >
               </li>
