--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
             <li class="site-nav__item">
               <a
                 href="./portfolio.html"
-                class="site-nav__link link site-nav__link--current"
+                class="site-nav__link site-nav__link--current link"
               >
                 Портфолио</a
               >
@@ -93,7 +93,7 @@
                 <a class="link menu__nav-link" href="./index.html">Студия</a>
               </li>
               <li class="menu__nav-item">
-                <a class="menu__nav-link--current link" href="./portfolio.html"
+                <a class="link menu__nav-link--current" href="./portfolio.html"
                   >Портфолио</a
                 >
               </li>
@@ -105,14 +105,16 @@
           <div class="menu__contacts">
             <ul class="menu__contacts-list list">
               <li class="menu__contacts-item">
-                <a href="tel:+380961111111" class="menu__contacts-link link"
+                <a
+                  href="tel:+380961111111"
+                  class="menu__contacts-link menu__contacts-link--tel link"
                   >+38 096 111 11 11</a
                 >
               </li>
               <li class="menu__contacts-item">
                 <a
                   href="mail:info@devstudio.com"
-                  class="menu__contacts-link link"
+                  class="menu__contacts-link menu__contacts-link--mail link"
                   >info@devstudio.com</a
                 >
               </li>
