add img responsive

--- a/index.html
+++ b/index.html
@@ -226,10 +226,13 @@
             <li class="performance__item">
               <div class="performance__thumb">
                 <img
-                  src="./images/box/box1.jpg"
+                  srcset="
+                    ./images/performance/performance1-min.jpg    1x,
+                    ./images/performance/performance1-2x-min.jpg 2x
+                  "
+                  src="./images/performance/performance1-min.jpg"
                   alt="Человек перед планшетом,набирает текст на клавиатуре"
                   width="370"
-                  height="294"
                 />
                 <p class="performance__text">Десктопные приложения</p>
               </div>
@@ -237,10 +240,13 @@
             <li class="performance__item">
               <div class="performance__thumb">
                 <img
-                  src="./images/box/box2.jpg"
+                  srcset="
+                    ./images/performance/performance2-min.jpg    1x,
+                    ./images/performance/performance2-2x-min.jpg 2x
+                  "
+                  src="./images/performance/performance2-min.jpg"
                   alt="Человек с телефоном в руке работает с ноутбуком"
                   width="370"
-                  height="294"
                 />
                 <p class="performance__text">Мобильные приложения</p>
               </div>
@@ -248,10 +254,13 @@
             <li class="performance__item">
               <div class="performance__thumb">
                 <img
-                  src="./images/box/box3.jpg"
+                  srcset="
+                    ./images/performance/performance3-min.jpg    1x,
+                    ./images/performance/performance3-2x-min.jpg 2x
+                  "
+                  src="./images/performance/performance3-min.jpg"
                   alt="Человек с планшетом в руке, на планшете цветовая гамма"
                   width="370"
-                  height="294"
                 />
                 <p class="performance__text">Дизайнерские решения</p>
               </div>
