fix in form footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -480,7 +480,7 @@
             <input
               type="email"
               name="email"
-              id="footer-label"
+              id="subscribe__label"
               placeholder="E-mail"
               class="subscribe__input"
             />
