add responsive team

--- a/index.html
+++ b/index.html
@@ -275,13 +275,35 @@
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list list">
             <li class="team__item">
-              <img
-                class="img"
-                src="./images/team/img.jpg"
-                alt="Человек в очках и красном поло"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/team/team1-min.jpg    1x,
+                    ./images/team/team1-2x-min.jpg 2x
+                  "
+                  media="(min-width: 0px ) and (max-width: 767px)"
+                />
+                <source
+                  srcset="
+                    ./images/team/team1-354-min.jpg    1x,
+                    ./images/team/team1-354-2x-min.jpg 2x
+                  "
+                  media="(min-width: 768px) and (max-width: 1199px)"
+                />
+                <source
+                  srcset="
+                    ./images/team/team1-270-min.jpg    1x,
+                    ./images/team/team1-270-2x-min.jpg 2x
+                  "
+                  media="(min-width:1200px)"
+                />
+                <img
+                  class="img"
+                  src="./images/team/team1-min.jpg"
+                  alt="Человек в очках и красном поло"
+                  width="450"
+                />
+              </picture>
               <div class="team__information-block">
                 <h3 class="team__name">Игорь Демьяненко</h3>
                 <p lang="en" class="team__position">Product Designer</p>
@@ -324,13 +346,35 @@
               </div>
             </li>
             <li class="team__item">
-              <img
-                class="img"
-                src="./images/team/img1.jpg"
-                alt=":Женщина в черном костюме и очках"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/team/team2-min.jpg    1x,
+                    ./images/team/team2-2x-min.jpg 2x
+                  "
+                  media="(min-width: 0px ) and (max-width: 767px)"
+                />
+                <source
+                  srcset="
+                    ./images/team/team2-354-min.jpg    1x,
+                    ./images/team/team2-354-2x-min.jpg 2x
+                  "
+                  media="(min-width: 768px) and (max-width: 1199px)"
+                />
+                <source
+                  srcset="
+                    ./images/team/team2-270-min.jpg    1x,
+                    ./images/team/team2-270-2x-min.jpg 2x
+                  "
+                  media="(min-width:1200px)"
+                />
+                <img
+                  class="img"
+                  src="./images/team/team2-min.jpg"
+                  alt=":Женщина в черном костюме и очках"
+                  width="450"
+                />
+              </picture>
               <div class="team__information-block">
                 <h3 class="team__name">Ольга Репина</h3>
                 <p lang="en" class="team__position">Frontend Developer</p>
@@ -373,13 +417,36 @@
               </div>
             </li>
             <li class="team__item">
-              <img
-                class="img"
-                src="./images/team/img2.jpg"
-                alt="улыбающийся мужчина в рубашке"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/team/team3-min.jpg    1x,
+                    ./images/team/team3-2x-min.jpg 2x
+                  "
+                  media="(min-width: 0px ) and (max-width: 767px)"
+                />
+                <source
+                  srcset="
+                    ./images/team/team3-354-min.jpg    1x,
+                    ./images/team/team3-354-2x-min.jpg 2x
+                  "
+                  media="(min-width: 768px) and (max-width: 1199px)"
+                />
+                <source
+                  srcset="
+                    ./images/team/team3-270-min.jpg    1x,
+                    ./images/team/team3-270-2x-min.jpg 2x
+                  "
+                  media="(min-width:1200px)"
+                />
+
+                <img
+                  class="img"
+                  src="./images/team/team3-min.jpg"
+                  alt="улыбающийся мужчина в рубашке"
+                  width="450"
+                />
+              </picture>
               <div class="team__information-block">
                 <h3 class="team__name">Николай Тарасов</h3>
                 <p lang="en" class="team__position">Marketing</p>
@@ -422,13 +489,35 @@
               </div>
             </li>
             <li class="team__item">
-              <img
-                class="img"
-                src="./images/team/img3.jpg"
-                alt="Мужчина в черной футболке и очках"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/team/team4-min.jpg    1x,
+                    ./images/team/team4-2x-min.jpg 2x
+                  "
+                  media="(min-width: 0px ) and (max-width: 767px)"
+                />
+                <source
+                  srcset="
+                    ./images/team/team4-354-min.jpg    1x,
+                    ./images/team/team4-354-2x-min.jpg 2x
+                  "
+                  media="(min-width: 768px) and (max-width: 1199px)"
+                />
+                <source
+                  srcset="
+                    ./images/team/team4-270-min.jpg    1x,
+                    ./images/team/team4-270-2x-min.jpg 2x
+                  "
+                  media="(min-width:1200px)"
+                />
+                <img
+                  class="img"
+                  src="./images/team/team4-min.jpg"
+                  alt="Мужчина в черной футболке и очках"
+                  width="450"
+                />
+              </picture>
               <div class="team__information-block">
                 <h3 class="team__name">Михаил Ермаков</h3>
                 <p lang="en" class="team__position">UI Designer</p>
