--- a/portfolio.html
+++ b/portfolio.html
@@ -181,12 +181,14 @@
             <li class="portfolio__item">
               <a class="portfolio__link link" href="./portfolio.html">
                 <div class="portfolio__thumb">
-                  <img
-                    class="img"
-                    src="./images/portfolio/img1.jpg"
-                    alt="Ноутбук с сайтом"
-                    width="370"
-                  />
+                  <picture>
+                    <img
+                      class="img"
+                      src="./images/portfolio/img1.jpg"
+                      alt="Ноутбук с сайтом"
+                      width="450"
+                    />
+                  </picture>
                   <div class="overlay">
                     <p class="overlay__text">
                       Ресурс предлагает комплексные предложения с разным уровнем
@@ -205,12 +207,14 @@
             <li class="portfolio__item">
               <a class="portfolio__link link" href="./portfolio.html">
                 <div class="portfolio__thumb">
-                  <img
-                    class="img"
-                    src="./images/portfolio/img2.jpg"
-                    alt="Баскетболисты играют в баскетбол"
-                    width="370"
-                  />
+                  <picture>
+                    <img
+                      class="img"
+                      src="./images/portfolio/img2.jpg"
+                      alt="Баскетболисты играют в баскетбол"
+                      width="450"
+                    />
+                  </picture>
                   <div class="overlay">
                     <p class="overlay__text">
                       Ресурс предлагает комплексные предложения с разным уровнем
@@ -231,12 +235,14 @@
             <li class="portfolio__item">
               <a class="portfolio__link link" href="./portfolio.html">
                 <div class="portfolio__thumb">
-                  <img
-                    class="img"
-                    src="./images/portfolio/img3.jpg"
-                    alt="Рыба"
-                    width="370"
-                  />
+                  <picture>
+                    <img
+                      class="img"
+                      src="./images/portfolio/img3.jpg"
+                      alt="Рыба"
+                      width="450"
+                    />
+                  </picture>
                   <div class="overlay">
                     <p class="overlay__text">
                       Ресурс предлагает комплексные предложения с разным уровнем
@@ -257,12 +263,14 @@
             <li class="portfolio__item">
               <a class="portfolio__link link" href="./portfolio.html">
                 <div class="portfolio__thumb">
-                  <img
-                    class="img"
-                    src="./images/portfolio/img4.jpg"
-                    alt="Наушники"
-                    width="370"
-                  />
+                  <picture>
+                    <img
+                      class="img"
+                      src="./images/portfolio/img4.jpg"
+                      alt="Наушники"
+                      width="450"
+                    />
+                  </picture>
                   <div class="overlay">
                     <p class="overlay__text">
                       Ресурс предлагает комплексные предложения с разным уровнем
@@ -283,12 +291,14 @@
             <li class="portfolio__item">
               <a class="portfolio__link link" href="./portfolio.html">
                 <div class="portfolio__thumb">
-                  <img
-                    class="img"
-                    src="./images/portfolio/img5.jpg"
-                    alt="Коробки"
-                    width="370"
-                  />
+                  <picture>
+                    <img
+                      class="img"
+                      src="./images/portfolio/img5.jpg"
+                      alt="Коробки"
+                      width="450"
+                    />
+                  </picture>
                   <div class="overlay">
                     <p class="overlay__text">
                       Ресурс предлагает комплексные предложения с разным уровнем
@@ -309,12 +319,14 @@
             <li class="portfolio__item">
               <a class="portfolio__link link" href="./portfolio.html">
                 <div class="portfolio__thumb">
-                  <img
-                    class="img"
-                    src="./images/portfolio/img6.jpg"
-                    alt="Дисплей"
-                    width="370"
-                  />
+                  <picture>
+                    <img
+                      class="img"
+                      src="./images/portfolio/img6.jpg"
+                      alt="Дисплей"
+                      width="450"
+                    />
+                  </picture>
                   <div class="overlay">
                     <p class="overlay__text">
                       Ресурс предлагает комплексные предложения с разным уровнем
@@ -335,12 +347,14 @@
             <li class="portfolio__item">
               <a class="portfolio__link link" href="./portfolio.html">
                 <div class="portfolio__thumb">
-                  <img
-                    class="img"
-                    src="./images/portfolio/img7.jpg"
-                    alt="Книга"
-                    width="370"
-                  />
+                  <picture>
+                    <img
+                      class="img"
+                      src="./images/portfolio/img7.jpg"
+                      alt="Книга"
+                      width="450"
+                    />
+                  </picture>
                   <div class="overlay">
                     <p class="overlay__text">
                       Ресурс предлагает комплексные предложения с разным уровнем
@@ -361,12 +375,14 @@
             <li class="portfolio__item">
               <a class="portfolio__link link" href="./portfolio.html">
                 <div class="portfolio__thumb">
-                  <img
-                    class="img"
-                    src="./images/portfolio/img8.jpg"
-                    alt="Бирка"
-                    width="370"
-                  />
+                  <picture>
+                    <img
+                      class="img"
+                      src="./images/portfolio/img8.jpg"
+                      alt="Бирка"
+                      width="450"
+                    />
+                  </picture>
                   <div class="overlay">
                     <p class="overlay__text">
                       Ресурс предлагает комплексные предложения с разным уровнем
@@ -387,12 +403,14 @@
             <li class="portfolio__item">
               <a class="portfolio__link link" href="./portfolio.html">
                 <div class="portfolio__thumb">
-                  <img
-                    class="img"
-                    src="./images/portfolio/img9.jpg"
-                    alt="Ноутбук"
-                    width="370"
-                  />
+                  <picture>
+                    <img
+                      class="img"
+                      src="./images/portfolio/img9.jpg"
+                      alt="Ноутбук"
+                      width="450"
+                    />
+                  </picture>
                   <div class="overlay">
                     <p class="overlay__text">
                       Ресурс предлагает комплексные предложения с разным уровнем
