--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
         </div>
 
         <div class="subscribe">
-          <b class="subscribe__text">Подпишитесь на рассылку</b>
+          <p class="subscribe__text">Подпишитесь на рассылку</p>
           <form class="subscribe__form">
             <label for="subscribe__label"></label>
             <input
